[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python_x509_pkcs11"
dynamic = ["version", "description"]
requires-python = ">=3.8"
#keywords = x509, pkcs11, HSM
license = {file = "LICENSE"}
authors = [
    { name = "Victor Näslund", email = "victor@sunet.se"},
    { name = "Magnus Svensson", email ="masv@sunet.se"},
    { name = "Kushal Das", email = "kushal@sunet.se"}
]
readme = "README.md"
dependencies = [
    "asn1crypto>=1.5.1",
    "python-pkcs11>=0.7.0",
    "aiohttp",
    "cryptography >= 40.0"
]


[project.urls]
Source = "https://github.com/SUNET/python_x509_pkcs11"

[tool.flit.sdist]
include = ["LICENSE", "README.MD"]

[tool.mypy]
strict = true
mypy_path = "src"
packages = "python_x509_pkcs11"

[[tool.mypy.overrides]]
module = [
    "asn1crypto",
    "asn1crypto.keys",
    "asn1crypto.algos",
    "asn1crypto.ocsp",
    "asn1crypto.core",
    "asn1crypto.x509",
    "asn1crypto.csr",
    "asn1crypto.crl",
    "pkcs11",
    "pkcs11.util.ec",
    "pkcs11.util.rsa",
    "pkcs11.util.x509",
    "pkcs11.exceptions",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
line-length = 120

[tool.pylint.'FORMAT']
max-line-length = 120
